kubernetes/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: http
      port: 8080
      targetPort: 8080
