kubernetes/auth/auth-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  gateways:
    - gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /login
        - uri:
            exact: /callback
        - uri:
            exact: /logout
      route:
        - destination:
            host: auth
            port:
              number: 1234
